--- a/jjb/groupbasedpolicy/groupbasedpolicy-csit-3node.yaml
+++ b/jjb/groupbasedpolicy/groupbasedpolicy-csit-3node.yaml
@@ -36,7 +36,7 @@
     install-features: 'odl-groupbasedpolicy-ofoverlay,odl-groupbasedpolicy-ui,odl-restconf-all'
 
     # Robot custom options
-    robot-options: '-v ODL_VERSION:{stream}'
+    robot-options: ''
 
     # Trigger jobs (upstream dependencies)
     trigger-jobs: 'groupbasedpolicy-distribution-{stream},
