--- a/jjb/groupbasedpolicy/groupbasedpolicy-csit-6node.yaml
+++ b/jjb/groupbasedpolicy/groupbasedpolicy-csit-6node.yaml
@@ -36,9 +36,10 @@
     install-features: 'odl-groupbasedpolicy-ofoverlay,
                        odl-groupbasedpolicy-ui,
                        odl-restconf-all'
-
+    
     # Robot custom options
-    robot-options: '-v ODL_VERSION:{stream}'
+    robot-options: ''
+
 
     # Trigger jobs (upstream dependencies)
     trigger-jobs: 'groupbasedpolicy-distribution-{stream},
