--- a/jjb/groupbasedpolicy/groupbasedpolicy-csit-clustering.yaml
+++ b/jjb/groupbasedpolicy/groupbasedpolicy-csit-clustering.yaml
@@ -32,7 +32,7 @@
     install-features: 'odl-groupbasedpolicy-ofoverlay,odl-groupbasedpolicy-ui,odl-restconf-all'
 
     # Robot custom options
-    robot-options: '-v ODL_VERSION:{stream}'
+    robot-options: ''
 
     # Trigger jobs (upstream dependencies)
     trigger-jobs: 'neutron-distribution-{stream},
