--- a/jjb/tsdr/tsdr-csit-hsqldb.yaml
+++ b/jjb/tsdr/tsdr-csit-hsqldb.yaml
@@ -32,7 +32,7 @@
     install-features: 'odl-restconf,odl-tsdr-hsqldb,odl-tsdr-openflow-statistics-collector,odl-tsdr-netflow-statistics-collector,odl-tsdr-syslog-collector'
 
     # Robot custom options
-    robot-options: '-v ODL_VERSION:master'
+    robot-options: ''
 
     # Trigger jobs (upstream dependencies)
     trigger-jobs: 'openflowjava-distribution-{stream},openflowplugin-distribution-{stream},tsdr-distribution-{stream}'
