Remove the setting of ODL_VERSION from robot parameters
Change-Id: I54fae0f36f8d727867402eee24d54ab5e2e06274
Signed-off-by: lbuckuli <lbuckuli@cisco.com>
Signed-off-by: Peter Gubka <pgubka@cisco.com>

--- a/jjb/groupbasedpolicy/groupbasedpolicy-csit-6node.yaml
+++ b/jjb/groupbasedpolicy/groupbasedpolicy-csit-6node.yaml
@@ -38,7 +38,8 @@
                        odl-restconf-all'
 
     # Robot custom options
-    robot-options: '-v ODL_VERSION:{stream}'
+    robot-options: ''
+
 
     # Trigger jobs (upstream dependencies)
     trigger-jobs: 'groupbasedpolicy-distribution-{stream},
