--- a/jjb/groupbasedpolicy/groupbasedpolicy-csit-1node-openstack.yaml
+++ b/jjb/groupbasedpolicy/groupbasedpolicy-csit-1node-openstack.yaml
@@ -1,11 +1,18 @@
 - project:
     name: groupbasedpolicy-csit-openstack-integration
     jobs:
-        - '{project}-csit-1node-openstack-{openstack}-{functionality}-{stream}'
+        - '{project}-csit-{topology}-openstack-{openstack}-{functionality}-{stream}'
 
     # The project name
     project: 'groupbasedpolicy'
-    testplan: '{project}-1node-openstack.txt'
+
+    topology:
+        - 1node:
+            openstack_system_count: 1
+            odl_system_count: 1
+            enable-haproxy: 'no'
+
+    testplan: '{project}-{topology}-openstack.txt'
 
     # The project name
     functionality: 'openstack'
