refactor to support one template for both 1/3 node-openstack
Change-Id: Ie030b6c5963a00d6f7ae6cc9978fcc9a97542bd6
Signed-off-by: Sandra Biton <sandra.biton@hpe.com>

--- a/jjb/groupbasedpolicy/groupbasedpolicy-csit-1node-openstack.yaml
+++ b/jjb/groupbasedpolicy/groupbasedpolicy-csit-1node-openstack.yaml
@@ -1,11 +1,18 @@
 - project:
     name: groupbasedpolicy-csit-openstack-integration
     jobs:
-        - '{project}-csit-1node-openstack-{openstack}-{functionality}-{stream}'
+        - '{project}-csit-{topology}-openstack-{openstack}-{functionality}-{stream}'
 
     # The project name
     project: 'groupbasedpolicy'
-    testplan: '{project}-1node-openstack.txt'
+
+    topology:
+        - 1node:
+            openstack-vms: 1
+            controller-vms: 1
+            enable-haproxy: 'no'
+
+    testplan: '{project}-{topology}-openstack.txt'
 
     # The project name
     functionality: 'openstack'
@@ -33,8 +40,6 @@
             openstack-branch: 'stable/liberty'
             odl-ml2-branch: 'stable/liberty'
             odl-ml2-driver-version: 'v1'
-
-    openstack-vms: 1
 
     schedule: 'H H * * *'
 
