--- a/jjb/vtn/vtn-manager-csit-1node-openstack.yaml
+++ b/jjb/vtn/vtn-manager-csit-1node-openstack.yaml
@@ -1,11 +1,19 @@
 - project:
     name: vtn-manager-csit-openstack-integration
     jobs:
-        - '{project}-csit-1node-openstack-{openstack}-{functionality}-{stream}'
+        - '{project}-csit-{topology}-openstack-{openstack}-{functionality}-{stream}'
 
     # The project name
     project: 'vtn'
-    testplan: '{project}-1node-openstack.txt'
+
+    topology:
+        - 1node:
+            openstack-vms: 1
+            controller-vms: 1
+            enable-haproxy: 'no'
+            install-features: 'odl-vtn-manager-neutron,odl-restconf-all'
+
+    testplan: '{project}-{topology}-openstack.txt'
 
     # The project name
     functionality: 'neutron'
@@ -30,10 +38,6 @@
             openstack-branch: 'stable/newton'
             odl-ml2-branch: 'master'
             odl-ml2-driver-version: 'v1'
-
-    openstack-vms: 1
-
-    install-features: 'odl-vtn-manager-neutron,odl-restconf-all'
 
     schedule: 'H H * * *'
 
