--- a/jjb/netvirt/netvirt-legacy-csit-multi-openstack.yaml
+++ b/jjb/netvirt/netvirt-legacy-csit-multi-openstack.yaml
@@ -1,11 +1,24 @@
 - project:
     name: netvirt-legacy-csit-openstack-integration
     jobs:
-        - '{project}-csit-1node-openstack-{openstack}-{functionality}-{stream}'
+        - '{project}-csit-{topology}-openstack-{openstack}-{functionality}-{stream}'
 
     # The project name
     project: 'netvirt-legacy'
-    testplan: '{project}-1node-openstack.txt'
+
+    topology:
+        - 1node:
+            openstack-vms: 3
+            controller-vms: 1
+            enable-haproxy: 'no'
+            install-features: 'odl-ovsdb-openstack,decanter-collector-jmx,decanter-appender-elasticsearch'
+        - 3node:
+            openstack-vms: 4
+            controller-vms: 3
+            enable-haproxy: 'yes'
+            install-features: 'odl-jolokia,odl-ovsdb-openstack,decanter-collector-jmx,decanter-appender-elasticsearch'
+
+    testplan: '{project}-{topology}-openstack.txt'
 
     # The project name
     functionality:
@@ -38,10 +51,6 @@
             openstack-branch: 'stable/newton'
             odl-ml2-branch: 'stable/newton'
             odl-ml2-driver-version: 'v2'
-
-    openstack-vms: 3
-
-    install-features: 'odl-ovsdb-openstack,decanter-collector-jmx,decanter-appender-elasticsearch'
 
     odl-enable-l3: 'yes'
 
