--- a/jjb/netvirt/netvirt-legacy-csit-multi-openstack.yaml
+++ b/jjb/netvirt/netvirt-legacy-csit-multi-openstack.yaml
@@ -1,10 +1,24 @@
 - project:
-    name: netvirt-legacy-3node-csit-openstack-integration
+    name: netvirt-legacy-csit-openstack-integration
     jobs:
-        - '{project}-csit-3node-openstack-{openstack}-{functionality}-{stream}'
+        - '{project}-csit-{topology}-openstack-{openstack}-{functionality}-{stream}'
 
     # The project name
     project: 'netvirt-legacy'
+
+    topology:
+        - 1node:
+            openstack-vms: 3
+            controller-vms: 1
+            enable-haproxy: 'no'
+            install-features: 'odl-ovsdb-openstack,decanter-collector-jmx,decanter-appender-elasticsearch'
+        - 3node:
+            openstack-vms: 4
+            controller-vms: 3
+            enable-haproxy: 'yes'
+            install-features: 'odl-jolokia,odl-ovsdb-openstack,decanter-collector-jmx,decanter-appender-elasticsearch'
+
+    testplan: '{project}-{topology}-openstack.txt'
 
     # The project name
     functionality:
@@ -41,13 +55,7 @@
             odl-ml2-driver-version: 'v2'
             openstack-image: 'centos7-devstack-newton-2c-8g'
 
-    openstack-vms: 4
-
-    install-features: 'odl-ovsdb-openstack,decanter-collector-jmx,decanter-appender-elasticsearch'
-
     odl-enable-l3: 'yes'
-
-    enable-haproxy: 'yes'
 
     public-bridge: 'br-ex'
 
