--- a/jjb/packaging/packaging.yaml
+++ b/jjb/packaging/packaging.yaml
@@ -6,14 +6,49 @@
         - '{project-name}-verify-python-{stream}'
         - '{project-name}-build-rpm-{stream}'
         - '{project-name}-build-rpm-snap-{stream}'
-        - '{project-name}-test-rpm-{stream}'
         - '{project-name}-build-deb-{stream}'
+        - '{project-name}-test-rpm-{stream}'
+        - '{project-name}-test-puppet-{stream}'
 
     project: 'integration/packaging'
 
     stream:
         - master:
             branch: 'master'
+
+- job-template:
+    name: '{project-name}-test-puppet-{stream}'
+
+    node: centos7-docker-2c-4g
+
+    project-type: freestyle
+
+    properties:
+        - opendaylight-infra-properties:
+            build-days-to-keep: 7
+
+    parameters:
+        - opendaylight-infra-parameters:
+            project: '{project}'
+            branch: '{branch}'
+            refspec: 'refs/heads/{branch}'
+            artifacts: '{archive-artifacts}'
+
+    scm:
+        - integration-gerrit-scm:
+            basedir: 'packaging'
+            refspec: '$GERRIT_REFSPEC'
+            branch: 'master'
+
+    wrappers:
+        - opendaylight-infra-wrappers:
+            build-timeout: '{build-timeout}'
+
+    builders:
+        - shell: !include-raw: include-raw-test-puppet.sh
+
+    triggers:
+        - timed: '@daily'
 
 - job-template:
     name: '{project-name}-build-rpm-{stream}'
