--- a/jjb/packaging/packaging.yaml
+++ b/jjb/packaging/packaging.yaml
@@ -16,6 +16,40 @@
             branch: 'master'
 
 - job-template:
+    name: 'packaging-test-puppet-{stream}'
+
+    node: dynamic_verify
+
+    project-type: freestyle
+
+    properties:
+        - opendaylight-infra-properties:
+            build-days-to-keep: 7
+
+    parameters:
+        - opendaylight-infra-parameters:
+            project: '{project}'
+            branch: '{branch}'
+            refspec: 'refs/heads/{branch}'
+            artifacts: '{archive-artifacts}'
+
+    scm:
+        - integration-gerrit-scm:
+            basedir: 'packaging'
+            refspec: '$GERRIT_REFSPEC'
+            branch: 'master'
+
+    wrappers:
+        - opendaylight-infra-wrappers:
+            build-timeout: '{build-timeout}'
+
+    builders:
+        - shell: !include-raw: include-raw-test-puppet.sh
+
+    triggers:
+        - timed: '@daily'
+
+- job-template:
     name: '{project-name}-build-rpm-{stream}'
 
     node: dynamic_verify
