--- a/jjb/bgpcep/bgpcep-csit-bgp-ingest.yaml
+++ b/jjb/bgpcep/bgpcep-csit-bgp-ingest.yaml
@@ -17,9 +17,13 @@
         - boron:
             branch: 'stable/boron'
             jre: 'openjdk8'
+            install-features: 'odl-restconf,odl-bgpcep-data-change-counter,odl-bgpcep-bgp-all,odl-bgpcep-bgp,odl-netconf-connector-all'
+            robot-options: '-v USE_NETCONF_CONNECTOR:True -v CHECK_PERIOD_PREFIX_COUNT_SINGLE:10 -v REPETITIONS_CHANGE_COUNT_SINGLE:3 -v CHECK_PERIOD_PREFIX_COUNT_MANY:10 -v TEST_DURATION_MULTIPLIER_PREFIX_COUNT_MANY:8.0 -v REPETITIONS_CHANGE_COUNT_MANY:10 -v MULTIPLICITY_CHANGE_COUNT_MANY:600 -v TEST_DURATION_MULTIPLIER_CHANGE_COUNT_MANY:8.0 '
         - beryllium:
             branch: 'stable/beryllium'
             jre: 'openjdk7'
+            install-features: 'odl-restconf,odl-bgpcep-data-change-counter,odl-bgpcep-bgp-all,odl-bgpcep-bgp,odl-netconf-connector-all'
+            robot-options: '-v USE_NETCONF_CONNECTOR:True -v CHECK_PERIOD_PREFIX_COUNT_SINGLE:10 -v REPETITIONS_CHANGE_COUNT_SINGLE:3 -v CHECK_PERIOD_PREFIX_COUNT_MANY:10 -v TEST_DURATION_MULTIPLIER_PREFIX_COUNT_MANY:8.0 -v REPETITIONS_CHANGE_COUNT_MANY:10 -v MULTIPLICITY_CHANGE_COUNT_MANY:600 -v TEST_DURATION_MULTIPLIER_CHANGE_COUNT_MANY:8.0 '
 
     install:
         - only:
@@ -28,10 +32,10 @@
             scope: 'all'
 
     # Features to install
-    install-features: 'odl-restconf,odl-bgpcep-data-change-counter,odl-bgpcep-bgp-all,odl-bgpcep-bgp,odl-netconf-connector-all'
+    install-features: 'odl-restconf,odl-bgpcep-data-change-counter,odl-bgpcep-bgp-all,odl-bgpcep-bgp,odl-netconf-topology'
 
     # Robot custom options:
-    robot-options: '-v USE_NETCONF_CONNECTOR:True -v CHECK_PERIOD_PREFIX_COUNT_SINGLE:10 -v REPETITIONS_CHANGE_COUNT_SINGLE:3 -v CHECK_PERIOD_PREFIX_COUNT_MANY:10 -v TEST_DURATION_MULTIPLIER_PREFIX_COUNT_MANY:8.0 -v REPETITIONS_CHANGE_COUNT_MANY:10 -v MULTIPLICITY_CHANGE_COUNT_MANY:600 -v TEST_DURATION_MULTIPLIER_CHANGE_COUNT_MANY:8.0 '
+    robot-options: '-v USE_NETCONF_CONNECTOR:False -v CHECK_PERIOD_PREFIX_COUNT_SINGLE:10 -v REPETITIONS_CHANGE_COUNT_SINGLE:3 -v CHECK_PERIOD_PREFIX_COUNT_MANY:10 -v TEST_DURATION_MULTIPLIER_PREFIX_COUNT_MANY:8.0 -v REPETITIONS_CHANGE_COUNT_MANY:10 -v MULTIPLICITY_CHANGE_COUNT_MANY:600 -v TEST_DURATION_MULTIPLIER_CHANGE_COUNT_MANY:8.0 '
 
     # Trigger jobs: (daily)
     schedule: 'H H * * *'
