Fix Beryllium detection in determine-merge-order
Change-Id: I5291944cbdcb570d9075913d9b3cb48c17ec9ea3
Signed-off-by: Vratko Polak <vrpolak@cisco.com>

--- a/jjb/autorelease/autorelease-macros.yaml
+++ b/jjb/autorelease/autorelease-macros.yaml
@@ -48,7 +48,7 @@
        - shell: |
           # TODO: Remove this condition once stable/beryllium is no longer
           #       officially maintained.
-          if [ "$RELEASE_BRANCH" != "stable/beryllium" ]; then
+          if [ "$GERRIT_BRANCH" != "stable/beryllium" ]; then
               virtualenv --system-site-packages $WORKSPACE/venv
               source $WORKSPACE/venv/bin/activate
               pip install --upgrade pip
