--- a/jjb/openflowplugin/openflowplugin-patch-test.yaml
+++ b/jjb/openflowplugin/openflowplugin-patch-test.yaml
@@ -13,17 +13,18 @@
         - carbon:
             branch: 'master'
             jdk: 'openjdk8'
-            csit-list: >
-                openflowplugin-csit-1node-flow-services-only-{stream},
-                openflowplugin-csit-1node-flow-services-all-{stream},
-                openflowplugin-csit-1node-scalability-only-{stream},
-                openflowplugin-csit-1node-cbench-performance-only-{stream},
-                openflowplugin-csit-1node-config-performance-only-{stream},
-                openflowplugin-csit-3node-clustering-only-{stream}
-
+            git-url: 'ssh://hpe.cxtrm@git.opendaylight.org:29418'
         - boron:
             branch: 'stable/boron'
             jdk: 'openjdk8'
+            git-url: 'ssh://hpe.cxtrm@git.opendaylight.org:29418'
+        - beryllium:
+            branch: 'stable/beryllium'
+            jdk: 'openjdk7'
+            git-url: 'ssh://hpe.cxtrm@git.opendaylight.org:29418'
+
+    feature:
+        - all:
             csit-list: >
                 openflowplugin-csit-1node-flow-services-only-{stream},
                 openflowplugin-csit-1node-flow-services-all-{stream},
@@ -32,14 +33,7 @@
                 openflowplugin-csit-1node-config-performance-only-{stream},
                 openflowplugin-csit-3node-clustering-only-{stream}
 
-        - beryllium:
-            branch: 'stable/beryllium'
-            jdk: 'openjdk7'
+        - netvirt-cluster:
             csit-list: >
-                openflowplugin-csit-1node-flow-services-only-{stream},
-                openflowplugin-csit-1node-flow-services-all-{stream},
-                openflowplugin-csit-1node-scalability-only-{stream},
-                openflowplugin-csit-1node-cbench-performance-only-{stream},
-                openflowplugin-csit-1node-config-performance-only-{stream},
-                openflowplugin-csit-3node-clustering-only-{stream}
+                netvirt-csit-3node-openstack-newton-nodl-v2-gate-learn-{stream}
 
