add nevirt tests for genius patch test
Change-Id: Ib08cfdbfe2d512e2fa00fcaf93b00b07bbb8cd74
Signed-off-by: Ravit Peretz <ravit.peretz@hpe.com>

--- a/jjb/genius/genius-patch-test.yaml
+++ b/jjb/genius/genius-patch-test.yaml
@@ -20,6 +20,10 @@
             csit-list: >
                 netvirt-csit-1node-openstack-mitaka-gate-transparent-{stream}
 
+        - cluster-netvirt:
+            csit-list: >
+                netvirt-csit-3node-openstack-mitaka-gate-transparent-{stream}
+
         - genius:
             csit-list: >
                 genius-csit-1node-genius-only-{stream},
