--- a/jjb/genius/genius-patch-test.yaml
+++ b/jjb/genius/genius-patch-test.yaml
@@ -20,6 +20,11 @@
             csit-list: >
                 netvirt-csit-1node-openstack-mitaka-gate-transparent-{stream}
 
+        - netvirt-cluster:
+            csit-list: >
+                netvirt-csit-3node-openstack-mitaka-gate-transparent-{stream},
+                netvirt-csit-3node-openstack-newton-nodl-v2-gate-learn-{stream}
+
         - genius:
             csit-list: >
                 genius-csit-1node-genius-only-{stream},
