--- a/jjb/netvirt/netvirt-legacy-csit-3node-multi-openstack.yaml
+++ b/jjb/netvirt/netvirt-legacy-csit-3node-multi-openstack.yaml
@@ -29,14 +29,17 @@
             openstack-branch: 'stable/mitaka'
             odl-ml2-branch: 'stable/mitaka'
             odl-ml2-driver-version: 'v1'
+            openstack-image: 'centos7-devstack-mitaka-2c-8g'
         - newton:
             openstack-branch: 'stable/newton'
             odl-ml2-branch: 'stable/newton'
             odl-ml2-driver-version: 'v1'
+            openstack-image: 'centos7-devstack-newton-2c-8g'
         - newton-nodl-v2:
             openstack-branch: 'stable/newton'
             odl-ml2-branch: 'stable/newton'
             odl-ml2-driver-version: 'v2'
+            openstack-image: 'centos7-devstack-newton-2c-8g'
 
     openstack-vms: 4
 
