Add vpp topic branch for basic verify and merge jobs
Change-Id: If9990919500fa4fe4a50d8f1f490f0873a91c116
Signed-off-by: Sam Hague <shague@redhat.com>

--- a/jjb/netvirt/netvirt.yaml
+++ b/jjb/netvirt/netvirt.yaml
@@ -82,3 +82,31 @@
     dependencies: 'neutron-merge-{stream},openflowjava-merge-{stream},openflowplugin-merge-{stream},ovsdb-merge-{stream},sfc-merge-{stream}'
     email-upstream: '[netvirt] [neutron] [openflowjava] [openflowplugin] [ovsdb] [sfc]'
     archive-artifacts: ''
+
+- project:
+    name: netvirt-vpp
+    jobs:
+        - '{project-name}-clm-{stream}'
+        - '{project-name}-distribution-{stream}'
+        - '{project-name}-distribution-check-{stream}'
+        - '{project-name}-integration-{stream}'
+        - '{project-name}-merge-{stream}'
+        - '{project-name}-validate-autorelease-{stream}'
+        - '{project-name}-verify-{stream}-{maven}-{jdks}'
+
+    stream: vpp
+    project: 'netvirt'
+    project-name: 'netvirt'
+    branch: 'topic/vpp'
+    jdk: openjdk8
+    jdks:
+        - openjdk8
+    maven:
+        - mvn33:
+            mvn-version: 'mvn33'
+    mvn-settings: 'netvirt-settings'
+    mvn-goals: 'clean install'
+    mvn-opts: '-Xmx2048m -XX:MaxPermSize=512m'
+    dependencies: 'neutron-merge-{stream},openflowjava-merge-{stream},openflowplugin-merge-{stream},ovsdb-merge-{stream},sfc-merge-{stream}'
+    email-upstream: '[netvirt] [neutron] [openflowjava] [openflowplugin] [ovsdb] [sfc]'
+    archive-artifacts: ''
