OpenStack Heat Orchestration Templates
Use HOT [0] to instantiate CSIT instances in the public cloud. The idea
here would be to store heat orchestration templates inside
releng/builder and then use them to spin up the full CSIT labs in the
public cloud via heat calls against the public cloud api.

CSIT jobs will need to be rewritten to have a builder step that
instantiates the CSIT lab similar to what JClouds provides today
followed by a publisher step to clear up the lab at the end of the
build.

Will spin up nodes using the naming format ($JOB_NAME is actually a sum
calculation (echo "$JOB_NAME" | sum | awk '{ print $1 }'):

    $JOB_NAME-$BUILD_NUMBER-{type}

Stack name will simply be $JOB_NAME-$BUILD_NUMBER.

This patch preserves the build conditions for JCLOUDS such that the
common scripts work whether the job is using JClouds or Heat. We will
want to remove the conditional statements once all ODL jobs have moved
over to using Heat.

[0] http://docs.openstack.org/developer/heat/template_guide/index.html

Change-Id: I5cd7fc407119681c48885140ffc8ee594f8cab0c
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/integration/integration-macros.yaml
+++ b/jjb/integration/integration-macros.yaml
@@ -259,6 +259,8 @@
 # Macro: integration-copy-ssh-keys
 # Operation: Copy ssh public key used as authentication for robot
 # Used by: {project}-csit-* job templates
+#
+# TODO: Remove this macro. This code is moved into the new macro opendaylight-infra-stack
 
 - builder:
     name: integration-copy-ssh-keys
