OpenStack Heat Orchestration Templates
Use HOT [0] to instantiate CSIT instances in the public cloud. The idea
here would be to store heat orchestration templates inside
releng/builder and then use them to spin up the full CSIT labs in the
public cloud via heat calls against the public cloud api.

CSIT jobs will need to be rewritten to have a builder step that
instantiates the CSIT lab similar to what JClouds provides today
followed by a publisher step to clear up the lab at the end of the
build.

Will spin up nodes using the naming format:

    $JOB_NAME-$BUILD_NUM-{imagetype}

[0] http://docs.openstack.org/developer/heat/template_guide/index.html

Change-Id: I5cd7fc407119681c48885140ffc8ee594f8cab0c
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/integration/integration-templates.yaml
+++ b/jjb/integration/integration-templates.yaml
@@ -155,17 +155,13 @@
     wrappers:
         - opendaylight-infra-wrappers:
             build-timeout: '{build-timeout}'
-        - integration-jclouds-controller-mininet:
-            controller-image: '{controller-image}'
-            controller-vms: 1
-            mininet-image: '{mininet-image}'
-            mininet-vms: '{mininet-vms}'
 
     triggers:
         - integration-csit-{install}:
             jobs: '{trigger-jobs}'
 
     builders:
+        - opendaylight-infra-stack
         - integration-copy-ssh-keys
         - integration-cleanup-workspace
         - integration-install-robotframework
