--- a/jjb/releng-defaults.yaml
+++ b/jjb/releng-defaults.yaml
@@ -27,6 +27,13 @@
     mininet-image: 'ubuntu-trusty-mininet-2c-2g'
     mininet-vms: 1
     docker-image: 'centos7-docker-2c-4g'
+    stack-template: csit-2-instance-type.yaml
+    vm_0_count: 1
+    vm_0_flavor: 4 GB General Purpose v1
+    vm_0_image: CentOS 7 - java-builder - 20161031-0802
+    vm_1_count: 1
+    vm_1_flavor: 2 GB General Purpose v1
+    vm_1_image: Ubuntu 14.04 - mininet - 20161031-0803
 
     # Robot
     robot-options: ''
