OpenStack Heat Orchestration Templates
Use HOT [0] to instantiate CSIT instances in the public cloud. The idea
here would be to store heat orchestration templates inside
releng/builder and then use them to spin up the full CSIT labs in the
public cloud via heat calls against the public cloud api.

CSIT jobs will need to be rewritten to have a builder step that
instantiates the CSIT lab similar to what JClouds provides today
followed by a publisher step to clear up the lab at the end of the
build.

Will spin up nodes using the naming format ($JOB_NAME is actually a sum
calculation (echo "$JOB_NAME" | sum | awk '{ print $1 }'):

    $JOB_NAME-$BUILD_NUMBER-{type}

Stack name will simply be $JOB_NAME-$BUILD_NUMBER.

This patch preserves the build conditions for JCLOUDS such that the
common scripts work whether the job is using JClouds or Heat. We will
want to remove the conditional statements once all ODL jobs have moved
over to using Heat.

[0] http://docs.openstack.org/developer/heat/template_guide/index.html

Change-Id: I5cd7fc407119681c48885140ffc8ee594f8cab0c
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/releng-macros.yaml
+++ b/jjb/releng-macros.yaml
@@ -29,6 +29,10 @@
             name: GERRIT_REFSPEC
             default: '{refspec}'
             description: "GERRIT_REFSPEC parameter if not given by trigger"
+        - string:
+            name: STACK_NAME
+            default: '$JOB_NAME-$BUILD_NUMBER'
+            description: "Used by Heat to generate a unique stack & vm name"
 
 - parameter:
     name: build-tag
@@ -276,6 +280,15 @@
     publishers:
         - postbuildscript:
             builders:
+                - shell: |
+                    if [ -d "$WORKSPACE/.venv-openstack" ]; then
+                        # TODO: Remove the condition once we are no longer using
+                        #       JClouds plugin.
+                        if [ -z "$JCLOUDS_IPS" ]; then
+                            source $WORKSPACE/.venv-openstack/bin/activate
+                            openstack --os-cloud rackspace stack delete --yes $STACK_NAME
+                        fi
+                    fi
                 - shell: !include-raw: include-raw-deploy-archives.sh
                 - maven-target:
                         maven-version: '{maven-version}'
@@ -298,6 +311,26 @@
               # properties file as input for triggering another build.
               - '**/*.jenkins-trigger'
             fail-build: false
+
+- builder:
+    name: opendaylight-infra-stack
+    builders:
+        - shell: |
+            #!/bin/bash
+            git clone https://git.opendaylight.org/gerrit/releng/builder $WORKSPACE/.infra-scripts
+
+            virtualenv $WORKSPACE/.venv-openstack
+            source $WORKSPACE/.venv-openstack/bin/activate
+            pip install --upgrade pip
+            pip install --upgrade python-openstackclient python-heatclient
+            pip freeze
+
+            cd $WORKSPACE/.infra-scripts/openstack-hot
+
+            JOB_SUM=`echo $JOB_NAME | sum | awk '{ print $1 }'`
+            VM_NAME="$JOB_SUM-$BUILD_NUMBER"
+            openstack --os-cloud rackspace stack create --wait -t csit-2-instance-type.yaml -e $WORKSPACE/opendaylight-infra-environment.yaml --parameter "job_name=$VM_NAME" --parameter "silo=$SILO" $STACK_NAME
+        - shell: !include-raw: opendaylight-infra-copy-ssh-keys.sh
 
 - builder:
     name: wipe-org-opendaylight-repo
@@ -386,6 +419,11 @@
     # needed by OpenDaylight infra.
     name: opendaylight-infra-wrappers
     wrappers:
+        - mask-passwords
+        - config-file-provider:
+            files:
+                - file-id: rackspace-heat
+                  target: '$HOME/.config/openstack/clouds.yaml'
         - timeout:
             type: absolute
             timeout: '{build-timeout}'
