--- a/jjb/integration/integration-templates.yaml
+++ b/jjb/integration/integration-templates.yaml
@@ -1030,6 +1030,11 @@
             name: SECURITY_GROUP_MODE
             default: '{security-group-mode}'
             description: 'Security Group Mode to be used in netvirt aclservice config'
+        - string:
+            name: NUM_OPENSTACK_CONTROL_NODE
+            default: '{num-openstack-control-node}'
+            description: 'Number of openstack control nodes'
+
     scm:
         - integration-gerrit-scm:
             basedir: 'test'
