--- a/jjb/releng-defaults.yaml
+++ b/jjb/releng-defaults.yaml
@@ -10,6 +10,7 @@
     # Timeout in minutes
     build-timeout: 360
     build-node: centos7-java-builder-2c-8g
+    num-openstack-control-node: 1
 
     email-recipients: 'jenkins@lists.opendaylight.org'
     odl-ml2-driver-repo: 'https://github.com/openstack/networking-odl'
