--- a/jjb/netvirt/netvirt-csit-multi-openstack.yaml
+++ b/jjb/netvirt/netvirt-csit-multi-openstack.yaml
@@ -16,6 +16,33 @@
             odl_system_count: 3
             enable-haproxy: 'yes'
             install-features: 'odl-jolokia,odl-netvirt-openstack'
+        # FIXME need to remove - just for testing...
+        - 2site-1node:
+            openstack_system_count: 6
+            odl_system_count: 2
+            enable-haproxy: 'no'
+            install-features: 'odl-netvirt-openstack'
+            num-openstack-sites: 2
+        - 2site-3node:
+            openstack_system_count: 8
+            odl_system_count: 6
+            enable-haproxy: 'yes'
+            install-features: 'odl-jolokia,odl-netvirt-openstack'
+            num-openstack-sites: 2
+        # example how to use it
+        #- 3site-1node:
+        #    openstack_system_count: 9
+        #    odl_system_count: 3
+        #    enable-haproxy: 'no'
+        #    install-features: 'odl-netvirt-openstack,odl-federation-netvirt-integration-common'
+        #    num-openstack-sites: 3
+        #- 3site-3node:
+        #    openstack_system_count: 12
+        #    odl_system_count: 9
+        #    enable-haproxy: 'yes'
+        #    install-features: 'odl-jolokia,odl-netvirt-openstack,odl-federation-netvirt-integration-common'
+        #    num-openstack-sites: 3
+
 
     testplan: '{project}-{topology}-openstack.txt'
 
