--- a/jjb/integration/integration-templates.yaml
+++ b/jjb/integration/integration-templates.yaml
@@ -1146,6 +1146,11 @@
             name: SECURITY_GROUP_MODE
             default: '{security-group-mode}'
             description: 'Security Group Mode to be used in netvirt aclservice config'
+        - string:
+            name: NUM_OPENSTACK_SITES
+            default: '{num-openstack-sites}'
+            description: 'Number of openstack sites'
+
     scm:
         - integration-gerrit-scm:
             basedir: 'test'
