Fix Spectrometer deploy job
The frontend is starting too quickly before the backend has time to
fully initialize causing the frontend to not successfully start. This
patch inserts a sleep to give the backend some time to update and
refresh the git repos before restarting the frontend.

Change-Id: I143f1f023d0db84a7d0c664dad6b3844343043b4
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/spectrometer/spectrometer-jobs.yaml
+++ b/jjb/spectrometer/spectrometer-jobs.yaml
@@ -83,6 +83,7 @@
             pkill gunicorn
             sleep 5  # Sleep 5 seconds for cooldown
             nohup gunicorn -b 0.0.0.0:5000 'spectrometer:run_app()' --timeout 600 -k gevent >> ~/gunicorn.out &
+            sleep 120  # Sleep 2 minutes to allow Spectrometer to initialize
 
             echo "---> Restart spectrometer-web"
             pkill node
