Enable Heat for {project}-csit-1node-{functionality}-{install}-{stream}
Change-Id: I0729a1cd279d09a6f31593900a9c33e9f7cd1d4c
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/integration/integration-templates.yaml
+++ b/jjb/integration/integration-templates.yaml
@@ -155,19 +155,16 @@
     wrappers:
         - opendaylight-infra-wrappers:
             build-timeout: '{build-timeout}'
-        - integration-jclouds-controller-mininet:
-            controller-image: '{controller-image}'
-            controller-vms: 1
-            mininet-image: '{mininet-image}'
-            mininet-vms: '{mininet-vms}'
 
     triggers:
         - integration-csit-{install}:
             jobs: '{trigger-jobs}'
 
     builders:
-        - integration-copy-ssh-keys
+        # Cleanup scripts need to run first otherwise they break the infra
+        # scripts that run.
         - integration-cleanup-workspace
+        - opendaylight-infra-stack
         - integration-install-robotframework
         - inject:
             properties-file: 'env.properties'
