Enable Heat for {project}-csit-1node-{functionality}-{install}-{stream}
Change-Id: I0729a1cd279d09a6f31593900a9c33e9f7cd1d4c
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/aaa/aaa-csit-authn.yaml
+++ b/jjb/aaa/aaa-csit-authn.yaml
@@ -38,4 +38,7 @@
     trigger-jobs: 'yangtools-distribution-{stream},controller-distribution-{stream},aaa-distribution-{stream}'
 
     # Don't spin up mininet vms as aaa-csit-authn jobs don't need them
+    # TODO: Remove mininet-vms as it is deprecated in favor of vm_1_count for
+    #       Heat deployments
     mininet-vms: 0
+    vm_1_count: 0
