--- a/jjb/integration/integration-templates.yaml
+++ b/jjb/integration/integration-templates.yaml
@@ -155,19 +155,18 @@
     wrappers:
         - opendaylight-infra-wrappers:
             build-timeout: '{build-timeout}'
-        - integration-jclouds-controller-mininet:
-            controller-image: '{controller-image}'
-            controller-vms: 1
-            mininet-image: '{mininet-image}'
-            mininet-vms: '{mininet-vms}'
 
     triggers:
         - integration-csit-{install}:
             jobs: '{trigger-jobs}'
 
     builders:
-        - integration-copy-ssh-keys
+        # Cleanup scripts need to run first otherwise they break the infra
+        # scripts that run later.
         - integration-cleanup-workspace
+        - shell: !include-raw: include-raw-integration-infra-stack-2-instance-type.sh
+        - opendaylight-infra-stack:
+            stack-template: '{stack-template}'
         - integration-install-robotframework
         - inject:
             properties-file: 'env.properties'
