Enable Heat for csit-1node and csit-verify-1node
1node-periodic will be complete in a separate patch.

Change-Id: I0729a1cd279d09a6f31593900a9c33e9f7cd1d4c
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/aaa/aaa-csit-authn.yaml
+++ b/jjb/aaa/aaa-csit-authn.yaml
@@ -38,4 +38,4 @@
     trigger-jobs: 'yangtools-distribution-{stream},controller-distribution-{stream},aaa-distribution-{stream}'
 
     # Don't spin up mininet vms as aaa-csit-authn jobs don't need them
-    mininet-vms: 0
+    tools_system_count: 0
