--- a/jjb/alto/alto-csit-setup.yaml
+++ b/jjb/alto/alto-csit-setup.yaml
@@ -37,4 +37,4 @@
     trigger-jobs: 'alto-distribution-{stream}'
 
     # Don't spin up mininet vms as alto-csit-setup jobs don't need them
-    mininet-vms: 0
+    tools_system_count: 0
