--- a/jjb/controller/controller-csit-akka1.yaml
+++ b/jjb/controller/controller-csit-akka1.yaml
@@ -27,8 +27,8 @@
         - all:
             scope: 'all'
 
-    # No tools system VMs needed in JCloud configuration
-    mininet-vms: 0
+    # No tools system VMs needed in for this job
+    tools_system_count: 0
 
     # Features to install
     install-features: 'odl-restconf,odl-clustering-test-app,odl-jolokia'
