--- a/jjb/genius/genius-csit-genius.yaml
+++ b/jjb/genius/genius-csit-genius.yaml
@@ -26,8 +26,8 @@
             scope: 'all'
 
     # Mininet configuration
-    mininet-image: 'ubuntu-trusty-mininet-ovs-23-2c-2g'
-    mininet-vms: 2
+    tools_system_count: 2
+    tools_system_image: Ubuntu 14.04 - mininet-ovs-2.3 - 20161110-2310
 
     # Features to install
     install-features: 'odl-genius-ui'
