--- a/jjb/groupbasedpolicy/groupbasedpolicy-csit-3node.yaml
+++ b/jjb/groupbasedpolicy/groupbasedpolicy-csit-3node.yaml
@@ -29,8 +29,8 @@
             scope: 'all'
 
     # 3 Ubuntu VMs in JCloud configuration
-    mininet-image: 'ubuntu-trusty-gbp-2c-2g'
-    mininet-vms: 3
+    tools_system_count: 3
+    tools_system_image: Ubuntu 14.04 - gbp - 20161031-0916
 
     # Features to install
     install-features: 'odl-groupbasedpolicy-ofoverlay,odl-groupbasedpolicy-ui,odl-restconf-all'
