--- a/jjb/groupbasedpolicy/groupbasedpolicy-csit-6node.yaml
+++ b/jjb/groupbasedpolicy/groupbasedpolicy-csit-6node.yaml
@@ -29,8 +29,8 @@
             scope: 'all'
 
     # 6 Ubuntu VMs in JCloud configuration
-    mininet-image: 'ubuntu-trusty-gbp-2c-2g'
-    mininet-vms: 6
+    tools_system_count: 6
+    tools_system_image: Ubuntu 14.04 - gbp - 20161031-0916
 
     # Features to install
     install-features: 'odl-groupbasedpolicy-ofoverlay,
