--- a/jjb/groupbasedpolicy/groupbasedpolicy-csit-sxp.yaml
+++ b/jjb/groupbasedpolicy/groupbasedpolicy-csit-sxp.yaml
@@ -19,7 +19,7 @@
             scope: 'only'
 
     # Mininet configuration (TOOLS)
-    mininet-vms: 2
+    tools_system_count: 2
 
     # Features to install
     install-features: 'odl-restconf,odl-groupbasedpolicy-sxp-ise-adapter,odl-groupbasedpolicy-ne-location-provider,odl-groupbasedpolicy-ios-xe,odl-sfc-ios-xe-renderer,odl-sxp-controller'
