--- a/jjb/lacp/lacp-csit-lacp.yaml
+++ b/jjb/lacp/lacp-csit-lacp.yaml
@@ -28,7 +28,7 @@
         - all:
             scope: 'all'
 
-    mininet-image: 'ubuntu-trusty-mininet-ovs-23-2c-2g'
+    tools_system_image: Ubuntu 14.04 - mininet-ovs-2.3 - 20161110-2310
 
     # Features to install
     install-features: 'odl-lacp-ui'
