--- a/jjb/openflowplugin/openflowplugin-csit-flow-services.yaml
+++ b/jjb/openflowplugin/openflowplugin-csit-flow-services.yaml
@@ -32,7 +32,7 @@
     robot-options: ''
 
     # mininet image
-    mininet-image: 'ubuntu-trusty-mininet-ovs-25-2c-2g'
+    tools_system_image: Ubuntu 14.04 - mininet-ovs-2.5 - 20161031-0804
 
     # Trigger jobs (upstream dependencies)
     trigger-jobs: 'yangtools-distribution-{stream},controller-distribution-{stream},openflowjava-distribution-{stream},openflowplugin-distribution-{stream}'
