--- a/jjb/unimgr/unimgr-csit-legato.yaml
+++ b/jjb/unimgr/unimgr-csit-legato.yaml
@@ -26,7 +26,7 @@
             scope: 'all'
 
     # Mininet configuration
-    mininet-vms: 2
+    tools_system_count: 2
 
     # Features to install
     install-features: 'odl-unimgr-ui,odl-unimgr-netvirt'
