--- a/jjb/aaa/aaa-csit-idmlite.yaml
+++ b/jjb/aaa/aaa-csit-idmlite.yaml
@@ -38,4 +38,4 @@
     trigger-jobs: 'yangtools-distribution-{stream},controller-distribution-{stream},aaa-distribution-{stream}'
 
     # Don't spin up mininet vms as aaa-csit-authn jobs don't need them
-    mininet-vms: 0
+    tools_system_count: 0
