--- a/jjb/integration/integration-templates.yaml
+++ b/jjb/integration/integration-templates.yaml
@@ -69,11 +69,6 @@
     wrappers:
         - opendaylight-infra-wrappers:
             build-timeout: '{build-timeout}'
-        - integration-jclouds-controller-mininet:
-            controller-image: '{controller-image}'
-            controller-vms: 1
-            mininet-image: '{mininet-image}'
-            mininet-vms: '{mininet-vms}'
 
     triggers:
         - integration-trigger-patch-submitted:
@@ -83,8 +78,14 @@
             files: 'csit/suites/{project}/**'
 
     builders:
-        - integration-copy-ssh-keys
-        - integration-cleanup-workspace
+        - integration-infra-stack:
+            stack-template: '{stack-template}'
+            vm_0_count: '1'
+            vm_0_flavor: '{odl_system_flavor}'
+            vm_0_image: '{odl_system_image}'
+            vm_1_count: '{tools_system_count}'
+            vm_1_flavor: '{tools_system_flavor}'
+            vm_1_image: '{tools_system_image}'
         - integration-install-robotframework
         - inject:
             properties-file: 'env.properties'
@@ -155,19 +156,20 @@
     wrappers:
         - opendaylight-infra-wrappers:
             build-timeout: '{build-timeout}'
-        - integration-jclouds-controller-mininet:
-            controller-image: '{controller-image}'
-            controller-vms: 1
-            mininet-image: '{mininet-image}'
-            mininet-vms: '{mininet-vms}'
 
     triggers:
         - integration-csit-{install}:
             jobs: '{trigger-jobs}'
 
     builders:
-        - integration-copy-ssh-keys
-        - integration-cleanup-workspace
+        - integration-infra-stack:
+            stack-template: '{stack-template}'
+            vm_0_count: '1'
+            vm_0_flavor: '{odl_system_flavor}'
+            vm_0_image: '{odl_system_image}'
+            vm_1_count: '{tools_system_count}'
+            vm_1_flavor: '{tools_system_flavor}'
+            vm_1_image: '{tools_system_image}'
         - integration-install-robotframework
         - inject:
             properties-file: 'env.properties'
