--- a/jjb/openflowplugin/openflowplugin-csit-flow-services-frs.yaml
+++ b/jjb/openflowplugin/openflowplugin-csit-flow-services-frs.yaml
@@ -30,7 +30,7 @@
     robot-options: '-v flow_update_time:30s'
 
     # mininet image
-    mininet-image: 'ubuntu-trusty-mininet-ovs-25-2c-2g'
+    tools_system_image: Ubuntu 14.04 - mininet-ovs-2.5 - 20161031-0804
 
     # Trigger jobs (upstream dependencies)
     trigger-jobs: 'yangtools-distribution-{stream},controller-distribution-{stream},openflowjava-distribution-{stream},openflowplugin-distribution-{stream}'
