--- a/jjb/unimgr/unimgr-csit-basic.yaml
+++ b/jjb/unimgr/unimgr-csit-basic.yaml
@@ -29,7 +29,7 @@
             scope: 'all'
 
     # Mininet configuration
-    mininet-vms: 2
+    tools_system_count: 2
 
     # Features to install
     install-features: 'odl-unimgr-ui'
