--- a/jjb/integration/integration-templates.yaml
+++ b/jjb/integration/integration-templates.yaml
@@ -155,19 +155,29 @@
     wrappers:
         - opendaylight-infra-wrappers:
             build-timeout: '{build-timeout}'
-        - integration-jclouds-controller-mininet:
-            controller-image: '{controller-image}'
-            controller-vms: 1
-            mininet-image: '{mininet-image}'
-            mininet-vms: '{mininet-vms}'
 
     triggers:
         - integration-csit-{install}:
             jobs: '{trigger-jobs}'
 
     builders:
-        - integration-copy-ssh-keys
+        # Cleanup scripts need to run first otherwise they break the infra
+        # scripts that run.
         - integration-cleanup-workspace
+        - shell: |
+              #!/bin/bash
+              # Setup openstack envirnoment file for use by
+              # the opendaylight-infra-stack macro
+              cat $WORKSPACE/opendaylight-infra-environment.yaml << EOF
+              parameters:
+                  vm_0_count: 1
+                  vm_0_flavor: 4 GB General Purpose v1
+                  vm_0_image: CentOS 7 - java-builder - 20161031-0802
+                  vm_1_count: {mininet-vms}
+                  vm_1_flavor: 2 GB General Purpose v1
+                  vm_1_image: Ubuntu 14.04 - mininet - 20161031-0803
+              EOF
+        - opendaylight-infra-stack
         - integration-install-robotframework
         - inject:
             properties-file: 'env.properties'
